--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
+# you may need to run conda config --add channels conda-forge before installing
 requests
 black
 isort
-flake8
+ruff
 mypy
 python-dotenv
 alive-progress
@@ -10,3 +11,5 @@ pandas
 mplfinance
 Pillow
 scikit-learn
+scikit-image
+openblas
